--- a/src/pages/ContactPage.css
+++ b/src/pages/ContactPage.css
@@ -15,6 +15,7 @@
   flex-direction: column;
   justify-content: flex-start;
   background-color: var(--primary);
+  overflow: hidden;
   color: #ffffff;
 }
 
