--- a/src/pages/ProductsPage.css
+++ b/src/pages/ProductsPage.css
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  overflow: hidden;
   color: var(--color-white);
 }
 
